--- a/0_Limit Calculator Description/sections/testingProtocol.tex
+++ b/0_Limit Calculator Description/sections/testingProtocol.tex
@@ -17,6 +17,7 @@
     \newcommand{\green}{\cellcolor{green!50} teigiamas}
     \newcommand{\red}{\cellcolor{red!50} neigiamas}
     \newcommand{\noLimit}{Riba neegzistuoja}
+    \newcommand{~}{$\approx$}
     \newcommand{\header}[2]{\textbf{#1} & \multicolumn{3}{c}{\textbf{#2}} & \\ \hline}
     \begin{longtable}{|m{0.09\textwidth}|m{0.4\textwidth}|m{0.12\textwidth}|m{0.11\textwidth}|m{0.11\textwidth}|}
     \caption{Testavimo rezultatai} \label{tab:rez} \\
@@ -52,7 +53,6 @@
     1.18 & \[ \lim_{x \to \infty} \frac{x^2}{e^x} \]                                            & 0         &           &           \\ \hline
     1.19 & \[ \lim_{x \to 0} \frac{\sqrt{x+4}-2}{x} \]                                          & 1/4         &           &           \\ \hline
     
-
     \header{2}{Funkcijų kompozicijos ribos}
     2.1 & $$\lim_{x \to 0} sin({2arctg\frac{1}{x}})$$                                           & 0         &           &           \\ \hline
     2.2 & $$\lim_{x \to 0} arctg(\frac{sin(x)}{cos(x)})$$                                       & 0         &           &           \\ \hline
@@ -60,8 +60,7 @@
     2.4 & $$\lim_{x \to \frac{\pi}{2}} arctg(\frac{sin(x)}{cos(x)})$$                           & \noLimit  &           &           \\ \hline
     2.5 & $$\lim_{x \to 0} xsin(\frac{1}{x})$$                                                  & 0         &           &           \\ \hline
     2.6 & $$\lim_{x \to 0} \frac{\sin{4x}}{\sin{x}}$$                                           & 0         &           &           \\ \hline
-
-
+    2.7 & $$\lim_{x \to 0} \frac{cos^2(x)-1)(2*tan(x))}{1-tan^2(x)}$$                           & 0         &           &           \\ \hline
 
     \end{longtable}
 \end{center}
