--- a/0_Limit Calculator Description/sections/testingProtocol.tex
+++ b/0_Limit Calculator Description/sections/testingProtocol.tex
@@ -33,34 +33,35 @@
     0.2 & lim & 1 & 2  & \red \\ \hline
 
     \header{1}{Elementarių funkcijų ribos}
-    1.1 &\[ \lim_{x \to -1} \frac{1}{1+x} \]                                                    & \noLimit  &           &           \\ \hline
-    1.2 & \[ \lim_{x \to 2} \frac{2^x}{x^2} \]                                                  & 1         &           &           \\ \hline
-    1.3 & \[\lim_{x \to 30} \sqrt[5]{x}\]                                                       & ~1.97     & ~1.97     & \green    \\ \hline
-    1.4 & \[ \lim_{x \to 1.57} cos(2x) \]                                                       & ~-1       &           &           \\ \hline
-    1.5 & \[ \lim_{x \to 0} e^{\frac{1}{x}} \]                                                  & $+\infty$ &           &           \\ \hline
-    1.6 & \[ \lim_{x \to 0} \frac{sin(x)}{x} \]                                                 & 1         &           &           \\ \hline
-    1.7 & \[ \lim_{x \to \infty} \frac{sin(x)}{x}\]                                             & 0         &           &           \\ \hline
-    1.8 & \[ \lim_{x \to 0} \frac{sin(x)}{cos(x)} \]                                            & 0         &           &           \\ \hline
-    1.9 & \[ \lim_{x \to 0} \frac{cos(x)}{sin(x)} \]                                            & \noLimit  &           &           \\ \hline    
-    1.10 & \[ \lim_{x \to \infty} \frac{1}{x} \]                                                & 0         &           &           \\ \hline
-    1.11 & \[ \lim_{x \to -\infty} \frac{x^2}{x^4} \]                                           & 0         &           &           \\ \hline
-    1.12 & \[ \lim_{x \to \infty} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \] & 1/4       &           &           \\ \hline
-    1.13 & \[ \lim_{x \to 0} \frac{e^xsin(x)-x(1+x)}{x^3} \]                                    & 1/3       & 1/3       & \green    \\ \hline
-    1.14 & \[ \lim_{x \to 0} \frac{cos(x)-e^{(-\frac{x^2}{2})}}{x^4} \]                         & -1/12     &           &           \\ \hline
-    1.15 & \[ \lim_{x \to 5} (5+x)^5 \]                                                         & 100000    &           &           \\ \hline
-    1.16 & \[ \lim_{x \to 0.7854} \sqrt(2)sin(x) \]                                             & ~1        &           &           \\ \hline
-    1.17 & \[ \lim_{x \to 1} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \]      & ~0.2929   &           &           \\ \hline
-    1.18 & \[ \lim_{x \to \infty} \frac{x^2}{e^x} \]                                            & 0         &           &           \\ \hline
-    1.19 & \[ \lim_{x \to 0} \frac{\sqrt{x+4}-2}{x} \]                                          & 1/4         &           &           \\ \hline
-    
-    \header{2}{Funkcijų kompozicijos ribos}
-    2.1 & $$\lim_{x \to 0} sin({2arctg\frac{1}{x}})$$                                           & 0         &           &           \\ \hline
-    2.2 & $$\lim_{x \to 0} arctg(\frac{sin(x)}{cos(x)})$$                                       & 0         &           &           \\ \hline
-    2.3 & $$\lim_{x \to 0} arctg(\frac{e^x-1-x}{x^2})$$                                         & 1/2       & 1/2       & \green    \\ \hline
-    2.4 & $$\lim_{x \to \frac{\pi}{2}} arctg(\frac{sin(x)}{cos(x)})$$                           & \noLimit  &           &           \\ \hline
-    2.5 & $$\lim_{x \to 0} xsin(\frac{1}{x})$$                                                  & 0         &           &           \\ \hline
-    2.6 & $$\lim_{x \to 0} \frac{\sin{4x}}{\sin{x}}$$                                           & 0         &           &           \\ \hline
-    2.7 & $$\lim_{x \to 0} \frac{cos^2(x)-1)(2*tan(x))}{1-tan^2(x)}$$                           & 0         &           &           \\ \hline
+    1.1 &\[ \lim_{x \to -1} \frac{1}{1+x} \]                                                            & \noLimit      &               &           \\ \hline
+    1.2 & \[ \lim_{x \to 2} \frac{e^{xln2}}{x^2} \]                                                     & 1             &               &           \\ \hline
+    1.3 & \[\lim_{x \to 30} \sqrt[5]{x}\]                                                               & $\sqrt[5]{30}$& $\sqrt[5]{30}$& \green    \\ \hline
+    1.4 & \[ \lim_{x \to \frac{\pi}{2}} cos(2x) \]                                                      & -1            &               &           \\ \hline
+    1.5 & \[ \lim_{x \to 0} e^{\frac{1}{x}} \]                                                          & \noLimit      &               &           \\ \hline
+    1.6 & \[ \lim_{x \to 0} e^{\frac{1}{x^2}} \]                                                        & $+\infty$     &               &           \\ \hline  
+    1.7 & \[ \lim_{x \to 0} \frac{sin(x)}{x} \]                                                         & 1             &               &           \\ \hline
+    1.8 & \[ \lim_{x \to \infty} \frac{sin(x)}{x}\]                                                     & 0             &               &           \\ \hline
+    1.9 & \[ \lim_{x \to 0} \frac{sin(x)}{cos(x)} \]                                                    & 0             &               &           \\ \hline
+    1.10 & \[ \lim_{x \to 0} \frac{cos(x)}{sin(x)} \]                                                   & \noLimit      &               &           \\ \hline    
+    1.11 & \[ \lim_{x \to \infty} \frac{1}{x} \]                                                        & 0             &               &           \\ \hline
+    1.12 & \[ \lim_{x \to -\infty} \frac{x^2}{x^4} \]                                                   & 0             &               &           \\ \hline
+    1.13 & \[ \lim_{x \to \infty} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \]         & 1/4           &               &           \\ \hline
+    1.14 & \[ \lim_{x \to 0} \frac{e^xsin(x)-x(1+x)}{x^3} \]                                            & 1/3           & 1/3           & \green    \\ \hline
+    1.15 & \[ \lim_{x \to 0} \frac{cos(x)-e^{(-\frac{x^2}{2})}}{x^4} \]                                 & -1/12         &               &           \\ \hline
+    1.16 & \[ \lim_{x \to 5} (5+x)^5 \]                                                                 & 100000        &               &           \\ \hline
+    1.17 & \[ \lim_{x \to 0.7854} \sqrt{2}sin(x) \]                                                     & ~1            &               &           \\ \hline
+    1.18 & \[ \lim_{x \to 1} \frac{x^{\frac{3}{2}}}{x(\sqrt{x+1}+\sqrt{x-1}+2\sqrt{x})} \]              & $$\frac{1}{2+\sqrt{2}}$$ ~0.2929 & &      \\ \hline
+    1.19 & \[ \lim_{x \to \infty} \frac{x^2}{e^x} \]                                                    & 0             &               &           \\ \hline
+    1.20 & \[ \lim_{x \to 0} \frac{\sqrt{x+4}-2}{x} \]                                                  & 1/4           &               &           \\ \hline
+    1.21 & \[\lim_{x \to 0} \frac{\sin{4x}}{\sin{x}}\]                                                  & 4             &               &           \\ \hline
+   
+    \header{2}{Funkcijų kompozicijos ribos}     
+    2.1 & $$\lim_{x \to 0} sin({2arctg\frac{1}{x}})$$                                                   & 0             &               &           \\ \hline
+    2.2 & $$\lim_{x \to 0} arctg(\frac{sin(x)}{cos(x)})$$                                               & 0             &               &           \\ \hline
+    2.3 & $$\lim_{x \to 0} \frac{arctg(e^x-1-x)}{x^2}$$                                                 & 1/2           & 1/2           & \green    \\ \hline
+    2.4 & $$\lim_{x \to \frac{\pi}{2}} arctg(\frac{sin(x)}{cos(x)})$$                                   & \noLimit      &               &           \\ \hline
+    2.5 & $$\lim_{x \to 0} xsin(\frac{1}{x})$$                                                          & 0             &               &           \\ \hline
+    2.6 & $$\lim_{x \to 0} \frac{(cos^2(x)-1)\frac{2sin(x)}{cos(x)}}{1-(\frac{sin(x)}{cos(x)})^2}$$     & 0             &               &           \\ \hline
 
     \end{longtable}
 \end{center}
